--- a/author.html
+++ b/author.html
@@ -339,14 +339,17 @@
 			</section>
             <section class="author__games" id="switch_section-author">
                 <div class="switch__head">
-                    <div class="switch__head__point switch__head__point_active" data-title="all" id="switch_point-all" onclick="switch_section('all', 'author__games__grid_active')">
+                    <div class="switch__head__point switch__head__point_active" id="switch_point-all"">
+						<div class="switch__head__point__click" data-section="all"></div>
 						<div class="switch__head__point__text txt">Все игры</div>
 						<span class="txt"></span>
 					</div>
-                    <div class="switch__head__point" data-title="new" id="switch_point-new" onclick="switch_section('new', 'author__games__grid_active')">
+                    <div class="switch__head__point" id="switch_point-new"">
+						<div class="switch__head__point__click" data-section="new"></div>
 						<div class="switch__head__point__text txt">Новинки</div>
 					</div>
-                    <div class="switch__head__point" data-title="pop" id="switch_point-pop" onclick="switch_section('pop', 'author__games__grid_active')">
+                    <div class="switch__head__point" id="switch_point-pop"">
+						<div class="switch__head__point__click" data-section="pop"></div>
 						<div class="switch__head__point__text txt">Популярные</div>
 					</div>
                 </div>
