--- a/author.html
+++ b/author.html
@@ -339,19 +339,22 @@
 			</section>
             <section class="author__games" id="switch_section-author">
                 <div class="switch__head">
-                    <div class="switch__head__point switch__head__point_active" id="switch_point-all"">
-						<div class="switch__head__point__click" data-section="all"></div>
-						<div class="switch__head__point__text txt">Все игры</div>
-						<span class="txt"></span>
+					<div class="switch__head__left">
+						<div class="switch__head__point switch__head__point_active" id="switch_point-all"">
+							<div class="switch__head__point__click" data-section="all"></div>
+							<div class="switch__head__point__text txt">Все игры</div>
+							<span class="txt"></span>
+						</div>
+						<div class="switch__head__point" id="switch_point-new"">
+							<div class="switch__head__point__click" data-section="new"></div>
+							<div class="switch__head__point__text txt">Новинки</div>
+						</div>
+						<div class="switch__head__point" id="switch_point-pop"">
+							<div class="switch__head__point__click" data-section="pop"></div>
+							<div class="switch__head__point__text txt">Популярные</div>
+						</div>
 					</div>
-                    <div class="switch__head__point" id="switch_point-new"">
-						<div class="switch__head__point__click" data-section="new"></div>
-						<div class="switch__head__point__text txt">Новинки</div>
-					</div>
-                    <div class="switch__head__point" id="switch_point-pop"">
-						<div class="switch__head__point__click" data-section="pop"></div>
-						<div class="switch__head__point__text txt">Популярные</div>
-					</div>
+                    <div class="inputList"></div>
                 </div>
                 <div class="author__games__grid griding_3InRow switch__content author__games__grid_active" id="switch_content-all"></div>
                 <div class="author__games__grid griding_3InRow switch__content" id="switch_content-new"></div>
