--- a/catalog.html
+++ b/catalog.html
@@ -872,7 +872,7 @@
 									<div class="inputList__body__list__point__title">Гринд</div>
 								</div>
 								<div class="inputList__body__list__point">
-									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__click" data-value="value_4" data-title="point"></div>
 									<div class="inputList__body__list__point__mark"></div>
 									<div class="inputList__body__list__point__title">Автобус</div>
 								</div>
